Actualizando fuente e iconos
Iconos, fuestes, y de aplicacion actualizada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RapidFood SV</string>
+    <string name="app_name">Rapidfood</string>
     <string name="bienvenido">Bienvenido a RapidFood SV !!</string>
     <string name="todo">TODO</string>
     <string name="icon">icono</string>
