--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,10 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="btnLogout">Cerrar sesion</string>
     <string name="hamburguerleyend">Elige entre nuestra gran variedad de hamburguesas, desde la mas
     pequeña hasta la triple carne, sabemosos que tomaras una gran desicion.</string>
     <string name="pizzaleyenda">Disfruta de una gran variedad de sabores en familia o con amigos,
