--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     prefeirdos</string>
     <string name="postres">Explosion de sabores para acompañar con tu platillo preferido,
         desde la clásica tarta de galletas, a vasitos de frutas con un toque diferente, un pastel de queso o el típico flan casero</string>
+    <string name="agregar">Agregar al carrito</string>
 </resources>
