Direccion de usuario
Pantallas para que el usuario ingrese la direccion del pedido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="bienvenido">Bienvenido a RapidFood SV !!</string>
     <string name="todo">TODO</string>
     <string name="icon">icono</string>
+    <string name="direccionh">Direccion</string>
+    <string name="direccionhouse">Agregar direccion</string>
+    <string name="direccionCompleta">Ingresa la direccion completa en el siguiente campo</string>
     <string name="title_activity_home">activity_home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
