--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="postres">Explosion de sabores para acompañar con tu platillo preferido,
         desde la clásica tarta de galletas, a vasitos de frutas con un toque diferente, un pastel de queso o el típico flan casero</string>
     <string name="agregar">Agregar al carrito</string>
+    <string name="textview">TextView</string>
+    <string name="cancelar">Cancelar</string>
 </resources>
